Implement comprehensive security improvements
- Add input validation with Zod schemas for all API endpoints
- Create rate limiting utilities (ready for production implementation)
- Add CORS configuration for API endpoints
- Improve error handling with proper logging
- Secure backup API with validation and environment variable support
- Add comprehensive input sanitization for events, expenses, and wishlist
- Create security assessment document with detailed recommendations
- Fix status page translations to use English text directly
- Add proper TypeScript types and error handling
- Install security dependencies: express-rate-limit and zod

Security improvements include:
- Input validation and sanitization
- Rate limiting infrastructure
- CORS headers
- Better error handling
- Environment variable support for passwords
- Comprehensive security documentation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vercel/postgres": "^0.10.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "express-rate-limit": "^8.0.1",
     "googleapis": "^155.0.1",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
